# rack-dev_insight

./: .gitignore  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-rails  Gemfile  INSTALLATION_GUIDE.md  LICENSE.txt  README.md  Rakefile  docker-compose.yml  rack-analyzer.gemspec
.github/workflows/: gem.yml  main.yml
apidoc/: docker-compose.yaml  openapi.yaml
dummy_app/rails/db/: schema.rb
dummy_app/rails/test/: rack_analyzer_test.rb
ext/rack_analyzer/: Cargo.toml
ext/rack_analyzer/src/: errors.rs  extractor.rs  lib.rs  normalizer.rs
extension/: .eslintignore  .eslintrc.cjs  .prettierrc  index.html  manifest.json  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
extension/src/: types.ts
extension/src/api/: Api.ts  fetch.ts
extension/src/components/: ApiTabItem.svelte  DevtoolsPanel.svelte  Popup.svelte  (+4 more)
gem/: .env.test.docker  .env.test.local  .gitignore  .rubocop.yml  Appraisals  Cargo.toml  Dockerfile  Dockerfile-rails  Gemfile  Rakefile  docker-compose.yml  rack-analyzer.gemspec  rack-dev-insight.gemspec  rack-dev_insight.gemspec
gem/ext/rack_dev_insight/: Cargo.toml  extconf.rb
gem/ext/rack_dev_insight/src/: errors.rs  extractor.rs  lib.rs  normalizer.rs
gem/gemfiles/: mysql_0.4.gemfile  pg_1.3.gemfile  pg_1.4.gemfile  pg_1.5.gemfile  sqlite_1.4.gemfile
gem/lib/: rack-dev-insight.rb
gem/spec/: db_helper.rb  spec_helper.rb
lib/rack/: analyzer.rb
openapi/: docker-compose.yaml  openapi.yaml  redocly.yaml
spec/: db_helper.rb  rack_analyzer_spec.rb  spec_helper.rb
spec/rack/: analyzer_spec.rb
(+172 files in other folders)
