[package]
name = "rack_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Takahiro Ebato <ebato.takahiro@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5.4" }
sqlparser = { version = "0.35.0", features = ["visitor"] }
tap = { version = "1.0.1" }
