[package]
name = "rack_dev_insight"
version = "0.1.0"
edition = "2021"
authors = ["Takahiro Ebato <takahiro.ebato@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
sqlparser = { version = "0.38.0", features = ["visitor"] }
tap = { version = "1.0.1" }
indoc = { version = "2" }

[dev-dependencies]
magnus = { version = "0.6.2", features = ["embed"] }
rb-sys-test-helpers = { version = "0.2" }
